@@ -1,6 +1,14 @@
 2015-03-27  Tom de Vries  <tom@codesourcery.com>
 
 	PR testsuite/65594
+	* testsuite/libgomp.graphite/force-parallel-6.c (abort): Declare.
+	(init, check): New function.
+	(foo): Change return type to void.
+	(main): Call init and check.
+
+2015-03-27  Tom de Vries  <tom@codesourcery.com>
+
+	PR testsuite/65594
 	* testsuite/libgomp.graphite/force-parallel-6.c (M): Define.
 	(foo): Use M for non-inner loops to scale down test-case.
 
